form_helper csrf + fix formset

--- a/src/apps_common/form_helper/templates/form_helper/form.html
+++ b/src/apps_common/form_helper/templates/form_helper/form.html
@@ -1,7 +1,8 @@
 {% load form_helper %}
 
-
-{% csrf_token %}
+{% if form.csrf_token %}
+  {% csrf_token %}
+{% endif %}
 
 {% block prefix %}{% endblock prefix %}
 
